first section with head

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <head></head>
     <body>
         <h1>welcome</h1>
-        <p></p>
-        <p>dfgchfgh</p>
-    
+    <section>
+        <h2>first section</h2>
+    </section>
     </body>
 </html>
