add p in section one

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <h1>welcome</h1>
     <section>
         <h2>first section</h2>
+        <p>hi welcome in first section</p>
     </section>
     </body>
 </html>
